--- a/views/index.jade
+++ b/views/index.jade
@@ -12,7 +12,10 @@ block body
         li: a(href='videos') Videos
         li: a(href='/about') About
         li: a(href='/contact') Contact
-
+    div#navContact
+      h2 Dancing Tails
+      p.smallest Call Now
+      h2 (555)555-5555
   section#main(ng-view)
   section#footerSpace
 
