--- a/views/partials/home.jade
+++ b/views/partials/home.jade
@@ -1,7 +1,6 @@
 section#homeCover
-	div#companyName
-		h1 Dancing Tails
-		h1 Dog Training
+	figure#homeLogo
+		img(src="DTDTLogo.png")
 section#customer
 	h1.title Customer Testimonials
 	p.small check out what people have to say about us.
