--- a/views/index.jade
+++ b/views/index.jade
@@ -34,7 +34,7 @@ block body
       div.grid-third
         ul
           li: a(href='/') Home
-          li: a(href='client') Videos
+          li: a(href='videos') Videos
         ul
           li: a(href='/services') Serives
           li: a(href='/Philosophy') Philosophy
