--- a/views/partials/home.jade
+++ b/views/partials/home.jade
@@ -1,6 +1,10 @@
 section#homeCover
 	figure#homeLogo
 		img(src="DTDTLogo.png")
+		img(src="logoText.png")#logoText
+		img(src="logoDog1.png")#logoDog1
+		img(src="logoDog2.png")#logoDog2
+		img(src="logoDog3.png")#logoDog3
 section#customer
 	h1.title Customer Testimonials
 	p.small check out what people have to say about us.
@@ -66,4 +70,3 @@ section.pageEnd
 			h1 Finding the Right Program
 			p.small Read about our differnt training progams and see which one fits your pup the best
 			a(href="/services"): button View Programs
-script(src='/js/mainscript.js')
