--- a/public/css/main.css
+++ b/public/css/main.css
@@ -273,7 +273,6 @@ nav{
   position:fixed;
   top:0;
   left:50%;
-  background:#f5f5f5;
   color:#777;
   width:840px;
   height:77px;
@@ -283,6 +282,27 @@ nav{
   -moz-transform: translate(-50%, 0%);
   -ms-transform: translate(-50%, 0%);
   -o-transform: translate(-50%, 0%);
+}
+nav.seeThrough:after{
+  position:absolute;
+  top:0;
+  left:0;
+  width:100%;
+  height:100%;
+  content:"";
+  background:#f5f5f5;
+  z-index: -1;
+  opacity:0.9;
+}
+nav:after{
+  position:absolute;
+  top:0;
+  left:0;
+  width:100%;
+  height:100%;
+  content:"";
+  background:#f5f5f5;
+  z-index: -1;
 }
 #brand,#menu,#menu li,#menu li a,#navContact{
   display:inline-block;
@@ -305,11 +325,12 @@ nav{
   padding:10px 20px 0 20px;
   border-left:solid 1px
 }
-#navContact h2{
+#navContact h2:first-child{
   color:#333;
 }
 #navContact .smallest{
   margin:0;
+  color:#3FC380;
 }
 #main{
   background:#f5f5f5;
@@ -343,6 +364,10 @@ footer aside{
 }
 footer aside:last-child{
   margin-bottom:40px;
+}
+footer p a{
+  color:#999;
+  text-decoration:underline;
 }
 footer ul{
   list-style:none;
@@ -432,7 +457,7 @@ footer .credit{
 #logoText,#logoDog1,#logoDog2,#logoDog3{
   position:absolute;
   opacity:0;
-  top:0;
+  top:-5%;
   left:0;
   -ms-transition: all 0.3s ease;
   -webkit-transition: all 0.3s ease;
@@ -644,6 +669,17 @@ footer .credit{
   font-size:44px;
   overflow:hidden;
   float:left;
+}
+#contact .container{
+  padding-top:0;
+}
+#contact .container:after{
+  display:table;
+  width:100%;
+  content:"";
+}
+#contact .grid-half{
+  margin-top:0;
 }
 #contact .contactInfo{
   padding:0 0 0 40px;
