--- a/views/partials/philosophy.jade
+++ b/views/partials/philosophy.jade
@@ -2,23 +2,17 @@ section.container#philosophy
 	div.panelContainer
 		div.panel
 			h1 Training Philosophy
-		div.portrait
+		div.portraitLeft
 			div.panel
-				img(src="DancingTails_TrainingPhilosophy.jpg",style="max-width:100%")
+				img(src="philosophy2.jpg",style="max-width:100%")
 		div.panel
 			p As a certified dog trainer and a member of the 
 				a(href="http://www.petprofessionalguild.com/", target="_blank") Pet Professional Guild
 				| , my mission is to provide the highest quality, force-free, scientific-based dog training and care to each of my clients and their furry family members. Dancing tails are a natural result because I attend to the physical, emotional, and environmental well being of the dogs in my care.
 			p Certified in Training and Behavior Consultation from the Dog Training Internship Academy in San Francisco, my training philosophy is based on animal learning theory, which explains how learning works and occurs. I use Classical and Operant Conditioning when designing the best training plan for your dog.
-			p Classical Condition: Dogs learn through association.
-			p Operant Consition: Dogs learn through consequences.
-			p.italic See below for explaination
 		div.panel
-			h2 Classical Conditioning
+			h2 Classical Condition: Dogs learn through association.
 			img(src="classicalConditioning.jpg")
-		div.panel
-			h2 Operant Conditioning
-			img(src="operantConditioning.jpg")
 		div.panel
 			p Out of the four ways to increase or decrease behavior, I only use two: positive reinforcement and negative punishment. Both are humane training techniques, resulting in dancing tails and a strong bond between dog and handler.
 			ul
@@ -27,12 +21,15 @@ section.container#philosophy
 			p Negative Punishment decreases a behavior by removing a good consequence when the response is performed. From a dog’s perspective this translates to, “This wonderful thing will stop if I…”
 			p For example, Lola plays too rough, so I walk away.
 		div.panel
+			h2 Operant Consition: Dogs learn through consequences.
+			img(src="operantConditioning.jpg")
+		div.panel
 			h2 My take on dominance theory...
 			p According to the Pet Professional Guild, “Dominance theory is an obsolete and aversive method of interacting with animals that has at its foundation incorrect and misinterpreted data which can result in damage to the animal-human relationship and cause behavioral problems in the animal.” Further explanation—all of which I wholly agree with—can be found on 
 				a(href="http://www.petprofessionalguild.com/DominanceTheoryPositionStatement",target="_blank") this Pet Professional Guild webpage
 				| .
 section.pageEnd
-	figure.banner(style="background: url('../dog.jpg'); background-size:cover;background-position:center left;background-attachment:fixed")
+	figure.banner(style="background: url('../Maysie2.jpg'); background-size:cover;background-position:bottom center;background-attachment:fixed")
 		div
 			h1 Training Tips
 section.container
