--- a/views/index.jade
+++ b/views/index.jade
@@ -3,7 +3,7 @@ extends layout
 block body
   nav.seeThrough.ease
     div#brand
-      a(href='/'): h1: i.fa.fa-paw
+      a(href='/'): img(src="logoText2.png")
     div#menu
       ul
         li: a(href='/') Home
@@ -13,9 +13,9 @@ block body
         li: a(href='/about') About
         li: a(href='/contact') Contact
     div#navContact
-      h2 Dancing Tails
-      p.smallest Call Now
-      a(href="tel:1-805-302-4691"): h2 (805)302-4691
+      div
+        p.smallest Serving the East Bay Area
+        a(href="tel:1-805-302-4691"): h2 (805)302-4691
   section#main(ng-view)
   section#footerSpace
 
