--- a/views/partials/about.jade
+++ b/views/partials/about.jade
@@ -7,10 +7,18 @@ section.container#bio
 				img(src="DancingTails_AboutMe1.jpg",style="max-width:100%")
 			div.panel
 				ul
-					li.smallest Certified in Training and Behavior Consultation from San Francisco's Dog Training Internship Academy
-					li.smallest Proud Member of the Pet Professional Guild
-					li.smallest Master of Art in Social Science, Humboldt State University
-					li.smallest Bachelors of Science in Animal Science, Cal Poly San Luis Obispo
+					li.smallest 
+						img(src="DTIA.png",style="width:19px")
+						| Certified in Training and Behavior Consultation from San Francisco's Dog Training Internship Academy
+					li.smallest
+						img(src="PPGsmall.png",style="width:19px")
+						| Proud Member of the Pet Professional Guild
+					li.smallest
+						i.fa.fa-graduation-cap
+						| Master of Art in Social Science, Humboldt State University
+					li.smallest
+						i.fa.fa-graduation-cap
+						| Bachelors of Science in Animal Science, Cal Poly San Luis Obispo
 		div.panel
 			p I'm Alyssa: a Christian, wife, and (cue the fireworks!) dog trainer, in that order.
 			p But before I fill you in on my journey to this point in my life, I’d like to spend a few lines explaining how I can help you.
