Fixed some typos

--- a/views/index.jade
+++ b/views/index.jade
@@ -15,7 +15,7 @@ block body
     div#navContact
       div
         p.smallest Serving the East Bay Area
-        a(href="tel:1-805-302-4691"): h2 (805)302-4691
+        a(href="tel:1-805-302-4691"): h2 (805) 302-4691
   section#main(ng-view)
   section#footerSpace
 
@@ -24,12 +24,12 @@ block body
         h1 Dancing Tails
         aside
           p.bold Contact
-          p To acquire more information, please contact Alyssa @ 
+          p To acquire more information, please contact Alyssa at 
             a(href="mailto:dancingtailstraining@gmail.com") dancingtailstraining@gmail.com
             | .
         aside
           p.bold Location
-          p We are located in Berkeley, California, and we are currently serving only in the East Bay area.
+          p We are located in Berkeley, California, and we are currently serving the East Bay.
       div.grid-third
         img#ppg(src="PPG.png")
       div.grid-third
@@ -37,7 +37,7 @@ block body
           li: a(href='/') Home
           li: a(href='videos') Videos
         ul
-          li: a(href='/services') Serives
+          li: a(href='/services') Services
           li: a(href='/Philosophy') Philosophy
         ul
           li: a(href='/about') About
