--- a/views/partials/about.jade
+++ b/views/partials/about.jade
@@ -18,7 +18,7 @@ section.container#bio
 						| Master of Art in Social Science, Humboldt State University
 					li.smallest
 						i.fa.fa-graduation-cap
-						| Bachelors of Science in Animal Science, Cal Poly San Luis Obispo
+						| Bachelors of Science in Animal Science, Cal Poly, San Luis Obispo
 		div.panel
 			p I'm Alyssa: a Christian, wife, and (cue the fireworks!) dog trainer, in that order.
 			p But before I fill you in on my journey to this point in my life, I’d like to spend a few lines explaining how I can help you.
