--- a/views/partials/contact.jade
+++ b/views/partials/contact.jade
@@ -8,8 +8,8 @@ section.container#contact
 			div.grid-half
 				div.panel
 					h2 Phone
-					p.smallest Give us a call.
-					a(href="tel:1-805-302-4691"): p (805)302-4691
+					p.smallest Give me a call.
+					a(href="tel:1-805-302-4691"): p (805) 302-4691
 			div.grid-half
 				div.panel
 					img(src="dogPhone2.jpg",style)
@@ -19,7 +19,7 @@ section.container#contact
 			div.grid-half
 				div.panel
 					h2 Email
-					p.smallest Send us an email.
+					p.smallest Send me an email.
 					a(href="mailto:dancingtailstraining@gmail.com"): p dancingtailstraining@gmail.com
 			div.grid-half
 				div.panel
@@ -35,7 +35,7 @@ section.container#contact
 							h1 Parent Info
 						div.panel
 							p Name:
-							input(placeholder="Alyssa Hosbach")
+							input(placeholder="Your Full Name")
 						div.panel
 							p Phone:
 							input(placeholder="(555)555-5555")
@@ -49,13 +49,13 @@ section.container#contact
 							h1 Pup Info
 						div.panel
 							p Name:
-							input(placeholder="Puppy")
+							input(placeholder="Name")
 						div.panel
 							p Breed
-							input(placeholder="Puppy mix")
+							input(placeholder="(e.g., German Shepherd)")
 						div.panel
 							p Age
-							input(placeholder="2 months")
+							input(placeholder="(e.g., 2 months)")
 			div.panelContainer
 				div.panel
 					p Inquiry
