--- a/views/partials/home.jade
+++ b/views/partials/home.jade
@@ -68,5 +68,5 @@ section.pageEnd
 	figure.banner#homeEnd
 		div
 			h1 Finding the Right Program
-			p.small Read about our differnt training progams and see which one fits your pup the best
+			p.small Read about our different training progams and see which one fits your pup the best
 			a(href="/services"): button View Programs
